--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,9 +23,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run:
-          IMAGE_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$IMAGE_NAME:latest .
+        run: docker build -t ghcr.io/${{ github.repository_owner }}/it-landscape:latest .
 
       - name: Push Docker image
         run: docker push ghcr.io/${{ github.repository }}:latest
