--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,8 +24,10 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/dkmattiucll/it-landscape:latest .
+          USERNAME=$(echo "${{ github.actor }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/$USERNAME/it-landscape:latest .
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/dkmattiucll/it-landscape:latest
+          USERNAME=$(echo "${{ github.actor }}" | tr '[:upper:]' '[:lower:]')
+          docker push ghcr.io/$USERNAME/it-landscape:latest
