--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,11 +23,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          USERNAME=$(echo "${{ github.actor }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ghcr.io/$USERNAME/it-landscape:latest .
+        run: docker build -t ghcr.io/u/dkmattiucll/it-landscape:latest .
 
       - name: Push Docker image
-        run: |
-          USERNAME=$(echo "${{ github.actor }}" | tr '[:upper:]' '[:lower:]')
-          docker push ghcr.io/$USERNAME/it-landscape:latest
+        run: docker push ghcr.io/u/dkmattiucll/it-landscape:latest
