--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Docker Push via /u/ scope
 
 on:
   push:
@@ -8,23 +8,21 @@ on:
       - "Dockerfile"
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t ghcr.io/dkmattiucll/it-landscape:latest .
+      - name: Build image
+        run: docker build -t ghcr.io/u/dkmattiucll/it-landscape:latest .
 
-      - name: Push Docker image
-        run: docker push ghcr.io/dkmattiucll/it-landscape:latest
-
+      - name: Push image
+        run: docker push ghcr.io/u/dkmattiucll/it-landscape:latest
